fix: fix invisible banner

--- a/src/pages/styles/shop.scss
+++ b/src/pages/styles/shop.scss
@@ -25,6 +25,7 @@
     font-weight: 500;
     display: flex;
     justify-content: center;
+    margin: 10px 0;
     box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
       2px 6px 10px rgba(0, 0, 0, 0.2);
 
